--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -7,6 +7,9 @@
   <title>Rappi Hackithon</title>
 </head>
 <body>
+  App component html
+  aklsdjaklsjdklasjdklasjd
+  {{title}}
   <app-keymap></app-keymap>
 </body>
 </html>
