--- a/front/src/app/keymap/keymap.component.html
+++ b/front/src/app/keymap/keymap.component.html
@@ -1,3 +1,17 @@
-<p>
-  keymap works!
-</p>
+<i class="fa"></i>
+<div style="height: 600px">
+  <x-map #xmap [Options]="_options" [Box]="_box">
+    <x-map-marker [Latitude]="2" [Longitude]="32" >
+      
+    </x-map-marker>
+    <!-- <x-map-polygon [Paths]="_path" [Title]="'My Polygon'" (Click)="_click($event)"></x-map-polygon> -->
+  </x-map>
+</div>
+<div class="description">
+  This map contains a complex geo shape. Maps can contain hundreds of layered overlapping shapes....
+</div>
+<div class="description">
+  See <a href="https://github.com/infusion-code/angular-maps">https://github.com/infusion-code/angular-maps</a> for
+  more info.
+</div>
+<div class="ss">aklsjdklajsdkljasdklj</div>
