--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,13 +11,14 @@
     <option value="" disabled selected> <table>Tipo de vehiculo</table></option>
     <option value="1">Bicicleta</option>
     <option value="2">Moto</option>
-    <option value="0">Sin vehiculo</option>
+    <option value="0">Cualquiera</option>
 </select>
 
 <select *ngIf="orderTypeSelect" class="browser-default" (change)="getOrdersByType($event.target.value)">
     <option value="" disabled selected> <table>Tipo de orden</table></option>
     <option value="restaurant">Restaurante</option>
-    <option value="courier">Correo</option>
+    <option value="courier">RappiFavor</option>
+    <option value="ultraservicio">RappiCash</option>
     <option value="express">Express</option>
     <option value="market">Supermercado</option>
     <option value="whim">Antojo</option>
@@ -26,10 +27,11 @@
 <a class="waves-effect waves-light btn reset-btn"  *ngIf="resetButtom" (click)="resetFilter()">Resetear</a>
 
 <div class="content">
-    <agm-map [latitude] = "latitude" [longitude] = "longitude" [zoom] = "15" (mapClick) = "coors($event)" (boundsChange)="getStorekeepers($event)">
+    <agm-map [latitude] = "4.70551625403494" [longitude] = "-74.03951118339762" [zoom] = "18" (mapClick) = "coors($event)" (boundsChange)="getStorekeepers($event)">
         <agm-marker [iconUrl] = "{  url: './assets/images/'+e.toolkit.vehicle+'.png' }" [latitude]="+e.lat" [longitude] ="+e.lng" *ngFor="let e of store_keepers;"></agm-marker>
     </agm-map>
 </div>
+
 
 
 
